--- a/tenok-coin/pom.xml
+++ b/tenok-coin/pom.xml
@@ -78,7 +78,13 @@
       <artifactId>slf4j-log4j12</artifactId>
       <version>1.7.30</version>
     </dependency>
-
+    <!-- https://mvnrepository.com/artifact/org.knowm.xchart/xchart -->
+    <dependency>
+      <groupId>org.knowm.xchart</groupId>
+      <artifactId>xchart</artifactId>
+      <version>3.8.0</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/clojure-interop/java.awt -->
   </dependencies>
 
   <build>
