--- a/tenok-coin/pom.xml
+++ b/tenok-coin/pom.xml
@@ -84,7 +84,14 @@
       <artifactId>xchart</artifactId>
       <version>3.8.0</version>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/clojure-interop/java.awt -->
+    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.12.1</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
