--- a/tenok-coin/pom.xml
+++ b/tenok-coin/pom.xml
@@ -90,8 +90,21 @@
       <artifactId>jackson-databind</artifactId>
       <version>2.12.1</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/de.gsi.chart/chartfx-chart -->
+    <dependency>
+      <groupId>de.gsi.chart</groupId>
+      <artifactId>chartfx-chart</artifactId>
+      <version>11.2.3</version>
+    </dependency>
 
-
+    <!-- https://mvnrepository.com/artifact/org.openjfx/javafx -->
+    <dependency>
+      <groupId>com.sample</groupId>
+      <artifactId>sample</artifactId>
+      <version>1.0</version>
+      <scope>system</scope>
+      <systemPath>${project.basedir}/resources/javafxCombine.jar</systemPath>
+    </dependency>
   </dependencies>
 
   <build>
@@ -141,28 +154,28 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-assembly-plugin</artifactId>
           <configuration>
-              <!-- 프로젝트 루트에 jar를 만들기 위해 아래의 변수를 설정했다. -->
-              <outputDirectory>${project.basedir}</outputDirectory>
-              <archive>
-                  <manifest>
-                      <!-- FQCN으로 public static void main(String[] args)가 있는 메인 클래스를 넣자 -->
-                      <mainClass>org.tenok.coin.CandleIndex</mainClass>
-                  </manifest>
-              </archive>
-              <descriptorRefs>
-                  <descriptorRef>jar-with-dependencies</descriptorRef>
-              </descriptorRefs>
+            <!-- 프로젝트 루트에 jar를 만들기 위해 아래의 변수를 설정했다. -->
+            <outputDirectory>${project.basedir}</outputDirectory>
+            <archive>
+              <manifest>
+                <!-- FQCN으로 public static void main(String[] args)가 있는 메인 클래스를 넣자 -->
+                <mainClass>org.tenok.coin.CandleIndex</mainClass>
+              </manifest>
+            </archive>
+            <descriptorRefs>
+              <descriptorRef>jar-with-dependencies</descriptorRef>
+            </descriptorRefs>
           </configuration>
           <executions>
-              <execution>
-                  <id>make-assembly</id>
-                  <phase>package</phase>
-                  <goals>
-                      <goal>single</goal>
-                  </goals>
-              </execution>
+            <execution>
+              <id>make-assembly</id>
+              <phase>package</phase>
+              <goals>
+                <goal>single</goal>
+              </goals>
+            </execution>
           </executions>
-      </plugin>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
